Something went wrong while setting issue due date.
igt@perf_pmu@module-unload|igt@i915_module_load@reload-no-display - incomplete - cpu_latency_qos_update_request called for unknown object, WARNING: .* at kernel/power/qos.c:\d+ cpu_latency_qos_update_request
<3> [283.027975] cpu_latency_qos_update_request called for unknown object
<4> [283.028055] WARNING: CPU: 8 PID: 154 at kernel/power/qos.c:296 cpu_latency_qos_update_request+0x2d/0x100
<4> [283.028062] Modules linked in: i915(-) vgem drm_shmem_helper snd_hda_codec_hdmi smsc75xx mei_hdcp usbnet mii x86_pkg_temp_thermal coretemp ttm snd_intel_dspcfg crct10dif_pclmul crc32_pclmul snd_hda_codec ghash_clmulni_intel drm_kms_helper snd_hwdep syscopyarea e1000e snd_hda_core sysfillrect mei_me sysimgblt fb_sys_fops ptp snd_pcm mei pps_core prime_numbers intel_lpss_pci [last unloaded: snd_hda_intel]
<4> [283.028100] CPU: 8 PID: 154 Comm: kworker/u40:2 Not tainted 5.16.0-rc1-CI-CI_DRM_10888+ #1
<4> [283.028103] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP5 RVP, BIOS ADLPFWI1.R00.2313.A00.2107301001 07/30/2021
<4> [283.028106] Workqueue: i915-dp i915_digport_work_func [i915]
<4> [283.028234] RIP: 0010:cpu_latency_qos_update_request+0x2d/0x100
<4> [283.028238] Code: 0f 84 92 00 00 00 55 89 f5 53 48 89 fb 48 81 7f 28 e0 3d 65 82 74 18 48 c7 c6 40 f0 00 82 48 c7 c7 d0 36 2f 82 e8 8f f2 9a 00 <0f> 0b 5b 5d c3 66 90 65 8b 05 dd d3 ee 7e 89 c0 48 0f a3 05 83 9f
<4> [283.028240] RSP: 0018:ffffc90000cf7ba8 EFLAGS: 00010286
<4> [283.028243] RAX: 0000000000000000 RBX: ffff88811824b738 RCX: 0000000000000001
<4> [283.028245] RDX: 0000000080000001 RSI: ffffffff8230e565 RDI: 00000000ffffffff
<4> [283.028246] RBP: 00000000ffffffff R08: 0000000000000000 R09: c0000000ffff7fff
<4> [283.028248] R10: 0000000000000001 R11: ffffc90000cf79c0 R12: 0000000000000002
<4> [283.028249] R13: 0000000000000002 R14: 0000000000000000 R15: ffff8881207c0000
<4> [283.028263] FS: 0000000000000000(0000) GS:ffff8882a7200000(0000) knlGS:0000000000000000
<4> [283.028264] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [283.028266] CR2: 00007f0ce989ee70 CR3: 000000010f824003 CR4: 0000000000770ee0
<4> [283.028267] PKRU: 55555554
<4> [283.028269] Call Trace:
<4> [283.028270] <TASK>
<4> [283.028273] intel_dp_aux_xfer+0x609/0x8d0 [i915]
<4> [283.028367] ? finish_wait+0x80/0x80
<4> [283.028376] intel_dp_aux_transfer+0xc5/0x2b0 [i915]
<4> [283.028462] drm_dp_dpcd_access+0x79/0x130 [drm_kms_helper]
<4> [283.028480] drm_dp_dpcd_read+0xcd/0x110 [drm_kms_helper]
<4> [283.028490] intel_dp_hpd_pulse+0x12b/0x500 [i915]
<4> [283.028576] i915_digport_work_func+0xba/0x150 [i915]
<4> [283.028663] process_one_work+0x275/0x5d0
<4> [283.028673] worker_thread+0x37/0x390
<4> [283.028677] ? process_one_work+0x5d0/0x5d0
<4> [283.028679] kthread+0x16e/0x1a0
<4> [283.028683] ? set_kthread_struct+0x40/0x40
<4> [283.028686] ret_from_fork+0x1f/0x30
<4> [283.028698] </TASK>
<4> [283.028700] irq event stamp: 130255
<4> [283.028701] hardirqs last enabled at (130261): [<ffffffff81131012>] __up_console_sem+0x62/0x70
<4> [283.028708] hardirqs last disabled at (130266): [<ffffffff81130ff7>] __up_console_sem+0x47/0x70
<4> [283.028710] softirqs last enabled at (129346): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4> [283.028716] softirqs last disabled at (129339): [<ffffffff810b94e6>] irq_exit_rcu+0xa6/0xe0
<4> [283.028719] ---[ end trace 7a69500ae70740fa ]---